--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::Frame::Layer::Syslog.
 
+1.02 Thu Jan 26 17:48:36 EST 2012
+   - Windows + CPAN = withoutworldwriteables
+
 1.01 Thu Jan 26 17:48:36 EST 2012
    - t\02 ... dubious test number corrected
    - 'use if' pragma Perl version < 5.014 for Socket6 in Syslog.pm
