--- a/Net-Frame-Layer-Syslog-1.04/Changes
+++ b/Net-Frame-Layer-Syslog-1.04/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::Frame::Layer::Syslog.
 
+1.04 Mon Nov 19 17:48:36 EST 2012
+   - Socket name lookups now Socket version independent.
+
 1.03 Mon Feb  3 17:48:36 EST 2012
    - Socket / Socket6 woes with getaddrinfo Perl 5.12 vs 5.14
 
